{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "58e71075-3f02-4d1a-85d3-05a5992b32fd",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "64487238-063c-41a7-aff8-2651fbf4262f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "d24ada2f-575b-40f7-9fa6-09b46aae4caf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4225791d-6ad2-4307-8d14-10d8d4acd150",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "180ea978-1015-4ccd-b5fd-54ba04da9cba",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb2b590-c9e6-45fd-b9e6-b94f898a33ea",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76c5ad0e-9bfd-4fe1-91a6-f50c2c50e7c0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}